Changes in version 1.8.0
------------------------

- Added mutation burden calculation
- Code cleanups (switch to GRanges where possible)
- Added support for CNVkit coverage files (*.cnn, *.cnr)

API CHANGES

- New function: callMutationBurden
- Defunct functions: createSNPBlacklist, getDiploid, autoCurateResults
- Minor changes: 
    - Removed gc.data from filterTargets since gc_bias is now added to tumor 
      coverage
 
PLANNED FEATURES FOR 1.8

- Better sample summary statistics, like mutation burden, chromosomal 
  instability
- Better performance in low purity samples 
- Better performance in high purity samples with significant heterogeneity  
- LOH database
- Switch to S4 data structures (maybe)
- Whole dataset visualizations (maybe)
- Better support for known, small deletions and amplifications (e.g. EGFRvIII,
  MYC)
- Support for GATK4
- Better runtime performance by ignoring unlikely solutions early