@@ -52,6 +52,7 @@ importFrom(Rsamtools,scanBam)
 importFrom(Rsamtools,scanBamFlag)
 importFrom(Rsamtools,scanFa)
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,expand)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
 importFrom(SummarizedExperiment,rowRanges)
