@@ -8,4 +8,17 @@ test_setMappingBiasVcf <- function() {
     vcf.bias <- round(setMappingBiasVcf(vcf)$bias, digits=3)
     expected <- rep(1, 2331)
     checkEquals(expected, vcf.bias)
+    normal_panel <- system.file("extdata", "normalpanel.vcf.gz", package = "PureCN")
+    vcf <- readVcf(vcf.file, "hg19")
+    mb <- setMappingBiasVcf(vcf, normal.panel.vcf.file=normal_panel)
+    idx <- mb$pon.count>0
+    checkEqualsNumeric(c(15,5,27), head(mb$pon.count[idx],3))
+    nvcf <- readVcf(normal_panel, genome="hg19")
+    idx <- overlapsAny(vcf, nvcf)
+    # all overlapping have pon.count>0
+    checkEqualsNumeric(0, sum(!mb$pon.count[idx]>0))
+    # all non-overlapping have pon.count=0
+    checkEqualsNumeric(0, sum(mb$pon.count[!idx]>0))
+
+    checkException(setMappingBiasVcf(vcf, normal.panel.vcf.file=normal_panel, min.normals=1))
 }    
